Bug 334982 - Crash when adjusting layer transparency whilst Blur dialog is open
Summary: Crash when adjusting layer transparency whilst Blur dialog is open
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-18 08:41 UTC by Stuart Dickson
Modified: 2014-07-31 11:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart Dickson 2014-05-18 08:41:04 UTC
Reported crash in Linux.
In Windows (Krita Gemini) doesn't crash, but does freeze

Steps to reproduce:
1. Create an image with some content
2. Open the blur filter dialog
3. Adjust layer opacity in the layers docker
(crash / freeze)
Comment 1 Kahncub Farina 2014-05-18 13:00:39 UTC
OS: Kubuntu Linux 14.14 64-bit
Version: 2.8.0 according to the current Download page

My reproduction steps
1. Open up a JPEG that is 3445x2125 in size
2. Convert it into a .kra file
3. Draw something using the Airbrush tool
4. Go to Filter > Blur > Blur
5. Go 50 for both horizontal and vertical with Preview checked
6. When Blur finishes change the Opacity to something like, 50% or there abouts
7. Attempt to change the opacity again.
7a. Attempt to change the Blur value

Results: The application stops responding.
Comment 2 Kahncub Farina 2014-05-18 13:22:10 UTC
Quick Addendum to my reproduction steps. Put between Open a JPEG and draw something

- Download this image: http://hirurux.deviantart.com/art/Chrysalis-vs-Celestia-V2-372045519 (The full size 4137x2416 PNG)
- Go to Layer > New Layer > Import
- Import this image
- Transform this imported layer to make it smaller and put it in the corner
- Save

Now go through steps 3-7a.
Comment 3 Kahncub Farina 2014-05-18 13:59:43 UTC
Confirmed same reproduction steps also froze Krita Gemini on Windows 7 64-bit.
Comment 4 Halla Rempt 2014-05-18 14:28:39 UTC
Yes, I can confirm the issue. It's not very easy to solve, I'm afraid :-(
Comment 5 Halla Rempt 2014-05-18 14:50:01 UTC
it is enough to change a layer property during any long-running filter, btw.
Comment 6 Dmitry Kazakov 2014-05-18 19:47:25 UTC
Git commit 4d5865d68da0aca91529c38756c6c95da37a6a15 by Dmitry Kazakov.
Committed on 18/05/2014 at 19:46.
Pushed by dkazakov into branch 'krita-testing-kazakov'.

Fix a hang-up when opening the filter dialog twice

Or running any stroke-based action while having the dialog open

M  +7    -4    krita/ui/dialogs/kis_dlg_filter.cpp
M  +2    -3    krita/ui/dialogs/kis_dlg_filter.h
M  +26   -0    krita/ui/kis_filter_manager.cc
M  +3    -0    krita/ui/kis_filter_manager.h

http://commits.kde.org/calligra/4d5865d68da0aca91529c38756c6c95da37a6a15
Comment 7 Dmitry Kazakov 2014-05-18 19:50:45 UTC
Git commit 6e055e2f7dbad9ad8af99179f12a960e1073515f by Dmitry Kazakov.
Committed on 18/05/2014 at 19:46.
Pushed by dkazakov into branch 'master'.

Fix a hang-up when opening the filter dialog twice

Or running any stroke-based action while having the dialog open

M  +7    -4    krita/ui/dialogs/kis_dlg_filter.cpp
M  +2    -3    krita/ui/dialogs/kis_dlg_filter.h
M  +26   -0    krita/ui/kis_filter_manager.cc
M  +3    -0    krita/ui/kis_filter_manager.h

http://commits.kde.org/calligra/6e055e2f7dbad9ad8af99179f12a960e1073515f
Comment 8 Dmitry Kazakov 2014-07-31 11:51:57 UTC
Git commit 1c122e86baad2fff7cfee3276791022c5f6db2d6 by Dmitry Kazakov.
Committed on 31/07/2014 at 11:51.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix a hang-up when opening the filter dialog twice

Or running any stroke-based action while having the dialog open
Related: bug 337835

Conflicts:
	krita/ui/dialogs/kis_dlg_filter.cpp

Backported for:

M  +6    -3    krita/ui/dialogs/kis_dlg_filter.cpp
M  +2    -3    krita/ui/dialogs/kis_dlg_filter.h
M  +26   -0    krita/ui/kis_filter_manager.cc
M  +3    -0    krita/ui/kis_filter_manager.h

http://commits.kde.org/calligra/1c122e86baad2fff7cfee3276791022c5f6db2d6