Fix a hang-up when opening the filter dialog twice

Or running any stroke-based action while having the dialog open

BUG:334982