krita/ui/dialogs/kis_dlg_filter.h
@@ -44,9 +44,8 @@ public:
 
 protected slots:
 
-    void apply();
-
-    void close();
+    void slotOnAccept();
+    void slotOnReject();
 
     void createMask();
 
